crates/activate/src/snapshots/activate__test__create-no-splits.snap
---
source: crates/activate/src/lib.rs
expression: "(partition_changes, task_changes)"
---
[
  [],
  [
    {
      "Journal": {
        "upsert": {
          "name": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-ndjson"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/collection",
                "value": "ops/tasks/BASE_NAME/logs"
              },
              {
                "name": "estuary.dev/field/kind",
                "value": "derivation"
              },
              {
                "name": "estuary.dev/field/name",
                "value": "example%2Fderivation"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "ffffffff"
              }
            ]
          },
          "fragment": {
            "length": "536870912",
            "compressionCodec": "GZIP",
            "stores": [
              "gs://example-bucket/"
            ],
            "refreshInterval": "300s",
            "flushInterval": "86400s",
            "pathPostfixTemplate": "utc_date={{.Spool.FirstAppendTime.Format \"2006-01-02\"}}/utc_hour={{.Spool.FirstAppendTime.Format \"15\"}}"
          },
          "flags": 4,
          "maxAppendRate": "4194304"
        }
      }
    },
    {
      "Journal": {
        "upsert": {
          "name": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-ndjson"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/collection",
                "value": "ops/tasks/BASE_NAME/stats"
              },
              {
                "name": "estuary.dev/field/kind",
                "value": "derivation"
              },
              {
                "name": "estuary.dev/field/name",
                "value": "example%2Fderivation"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "ffffffff"
              }
            ]
          },
          "fragment": {
            "length": "536870912",
            "compressionCodec": "GZIP",
            "stores": [
              "gs://example-bucket/"
            ],
            "refreshInterval": "300s",
            "flushInterval": "86400s",
            "pathPostfixTemplate": "utc_date={{.Spool.FirstAppendTime.Format \"2006-01-02\"}}/utc_hour={{.Spool.FirstAppendTime.Format \"15\"}}"
          },
          "flags": 4,
          "maxAppendRate": "4194304"
        }
      }
    }
  ]
]
