crates/activate/src/snapshots/activate__test__create.snap
---
source: crates/activate/src/lib.rs
expression: "(partition_changes, shard_changes, log_changes)"
---
[
  {},
  {
    "changes": [
      {
        "upsert": {
          "id": "derivation/example/derivation/2020202020202020/00000000-00000000",
          "recoveryLogPrefix": "recovery",
          "hintPrefix": "/estuary/flow/hints",
          "hintBackups": 2,
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "hotStandbys": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "3fffffff"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "ffffffff"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "ringBufferSize": 65536,
          "readChannelSize": 4096
        }
      },
      {
        "upsert": {
          "id": "derivation/example/derivation/2020202020202020/40000000-00000000",
          "recoveryLogPrefix": "recovery",
          "hintPrefix": "/estuary/flow/hints",
          "hintBackups": 2,
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "hotStandbys": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "40000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "7fffffff"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "ffffffff"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "ringBufferSize": 65536,
          "readChannelSize": 4096
        }
      },
      {
        "upsert": {
          "id": "derivation/example/derivation/2020202020202020/80000000-00000000",
          "recoveryLogPrefix": "recovery",
          "hintPrefix": "/estuary/flow/hints",
          "hintBackups": 2,
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "hotStandbys": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "80000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "bfffffff"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "ffffffff"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "ringBufferSize": 65536,
          "readChannelSize": 4096
        }
      },
      {
        "upsert": {
          "id": "derivation/example/derivation/2020202020202020/c0000000-00000000",
          "recoveryLogPrefix": "recovery",
          "hintPrefix": "/estuary/flow/hints",
          "hintBackups": 2,
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "hotStandbys": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "c0000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "ffffffff"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "ffffffff"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "ringBufferSize": 65536,
          "readChannelSize": 4096
        }
      }
    ]
  },
  {
    "changes": [
      {
        "upsert": {
          "name": "recovery/derivation/example/derivation/2020202020202020/00000000-00000000",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "fragment": {
            "length": "268435456",
            "compressionCodec": "SNAPPY",
            "stores": [
              "gs://example-bucket/"
            ],
            "refreshInterval": "300s"
          },
          "flags": 4,
          "maxAppendRate": "4194304"
        }
      },
      {
        "upsert": {
          "name": "recovery/derivation/example/derivation/2020202020202020/40000000-00000000",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "fragment": {
            "length": "268435456",
            "compressionCodec": "SNAPPY",
            "stores": [
              "gs://example-bucket/"
            ],
            "refreshInterval": "300s"
          },
          "flags": 4,
          "maxAppendRate": "4194304"
        }
      },
      {
        "upsert": {
          "name": "recovery/derivation/example/derivation/2020202020202020/80000000-00000000",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "fragment": {
            "length": "268435456",
            "compressionCodec": "SNAPPY",
            "stores": [
              "gs://example-bucket/"
            ],
            "refreshInterval": "300s"
          },
          "flags": 4,
          "maxAppendRate": "4194304"
        }
      },
      {
        "upsert": {
          "name": "recovery/derivation/example/derivation/2020202020202020/c0000000-00000000",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "fragment": {
            "length": "268435456",
            "compressionCodec": "SNAPPY",
            "stores": [
              "gs://example-bucket/"
            ],
            "refreshInterval": "300s"
          },
          "flags": 4,
          "maxAppendRate": "4194304"
        }
      }
    ]
  }
]
