crates/activate/src/snapshots/activate__test__create_and_delete.snap
---
source: crates/activate/src/lib.rs
expression: "(partition_changes, task_changes)"
---
[
  [
    {
      "Journal": {
        "expectModRevision": "111",
        "delete": "example/collection/replaced-pub-id/a_bool=%_true/a_str=a-val/pivot=10000000"
      }
    },
    {
      "Journal": {
        "expectModRevision": "111",
        "delete": "example/collection/replaced-pub-id/a_bool=%_true/a_str=a-val/pivot=40000000"
      }
    },
    {
      "Journal": {
        "expectModRevision": "111",
        "delete": "example/collection/replaced-pub-id/a_bool=%_false/a_str=other-val/pivot=00"
      }
    }
  ],
  [
    {
      "Shard": {
        "expectModRevision": "111",
        "delete": "derivation/example/derivation/replaced-pub-id/10000000-60000000"
      }
    },
    {
      "Shard": {
        "expectModRevision": "111",
        "delete": "derivation/example/derivation/replaced-pub-id/30000000-60000000"
      }
    },
    {
      "Shard": {
        "expectModRevision": "111",
        "delete": "derivation/example/derivation/replaced-pub-id/30000000-80000000"
      }
    },
    {
      "Shard": {
        "upsert": {
          "id": "derivation/example/derivation/2020202020202020/00000000-00000000",
          "recoveryLogPrefix": "recovery",
          "hintPrefix": "/estuary/flow/hints",
          "hintBackups": 2,
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "hotStandbys": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "55555554"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/logs-journal",
                "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "ffffffff"
              },
              {
                "name": "estuary.dev/stats-journal",
                "value": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "ringBufferSize": 65536,
          "readChannelSize": 4096
        }
      }
    },
    {
      "Journal": {
        "upsert": {
          "name": "recovery/derivation/example/derivation/2020202020202020/00000000-00000000",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "fragment": {
            "length": "268435456",
            "compressionCodec": "SNAPPY",
            "stores": [
              "gs://example-bucket/"
            ],
            "refreshInterval": "300s",
            "flushInterval": "172800s"
          },
          "flags": 4,
          "maxAppendRate": "4194304"
        }
      }
    },
    {
      "Shard": {
        "upsert": {
          "id": "derivation/example/derivation/2020202020202020/55555555-00000000",
          "recoveryLogPrefix": "recovery",
          "hintPrefix": "/estuary/flow/hints",
          "hintBackups": 2,
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "hotStandbys": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "55555555"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "aaaaaaa9"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/logs-journal",
                "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "ffffffff"
              },
              {
                "name": "estuary.dev/stats-journal",
                "value": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "ringBufferSize": 65536,
          "readChannelSize": 4096
        }
      }
    },
    {
      "Journal": {
        "upsert": {
          "name": "recovery/derivation/example/derivation/2020202020202020/55555555-00000000",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "fragment": {
            "length": "268435456",
            "compressionCodec": "SNAPPY",
            "stores": [
              "gs://example-bucket/"
            ],
            "refreshInterval": "300s",
            "flushInterval": "172800s"
          },
          "flags": 4,
          "maxAppendRate": "4194304"
        }
      }
    },
    {
      "Shard": {
        "upsert": {
          "id": "derivation/example/derivation/2020202020202020/aaaaaaaa-00000000",
          "recoveryLogPrefix": "recovery",
          "hintPrefix": "/estuary/flow/hints",
          "hintBackups": 2,
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "hotStandbys": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "aaaaaaaa"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "ffffffff"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/logs-journal",
                "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "00000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "ffffffff"
              },
              {
                "name": "estuary.dev/stats-journal",
                "value": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "ringBufferSize": 65536,
          "readChannelSize": 4096
        }
      }
    },
    {
      "Journal": {
        "upsert": {
          "name": "recovery/derivation/example/derivation/2020202020202020/aaaaaaaa-00000000",
          "replication": 3,
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "fragment": {
            "length": "268435456",
            "compressionCodec": "SNAPPY",
            "stores": [
              "gs://example-bucket/"
            ],
            "refreshInterval": "300s",
            "flushInterval": "172800s"
          },
          "flags": 4,
          "maxAppendRate": "4194304"
        }
      }
    },
    {
      "Journal": {
        "expectModRevision": "111",
        "delete": "recovery/derivation/example/derivation/replaced-pub-id/10000000-60000000"
      }
    },
    {
      "Journal": {
        "expectModRevision": "111",
        "delete": "recovery/derivation/example/derivation/replaced-pub-id/30000000-60000000"
      }
    },
    {
      "Journal": {
        "expectModRevision": "111",
        "delete": "recovery/derivation/example/derivation/replaced-pub-id/30000000-80000000"
      }
    }
  ]
]
