crates/activate/src/snapshots/activate__test__list_partition_request.snap
---
source: crates/activate/src/lib.rs
expression: "list_partitions_request(&models::Collection::new(\"the/collection\"))"
---
ListRequest {
    selector: Some(
        LabelSelector {
            include: Some(
                LabelSet {
                    labels: [
                        Label {
                            name: "estuary.dev/collection",
                            value: "the/collection",
                            prefix: false,
                        },
                    ],
                },
            ),
            exclude: None,
        },
    ),
    watch: false,
    watch_resume: None,
}
