crates/activate/src/snapshots/activate__test__ops_collection_partition.snap
---
source: crates/activate/src/lib.rs
expression: "json!([\"list_req\", list_req, \"spec\", spec])"
---
[
  "list_req",
  {
    "selector": {
      "include": {
        "labels": [
          {
            "name": "name",
            "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=capture/name=the%2Ftask%2Fname/pivot=00"
          }
        ]
      }
    }
  },
  "spec",
  {
    "flags": 4,
    "fragment": {
      "compressionCodec": "GZIP",
      "length": "536870912",
      "pathPostfixTemplate": "utc_date={{.Spool.FirstAppendTime.Format \"2006-01-02\"}}/utc_hour={{.Spool.FirstAppendTime.Format \"15\"}}",
      "refreshInterval": "300s",
      "stores": [
        "gs://example-bucket/"
      ]
    },
    "labels": {
      "labels": [
        {
          "name": "app.gazette.dev/managed-by",
          "value": "estuary.dev/flow"
        },
        {
          "name": "content-type",
          "value": "application/x-ndjson"
        },
        {
          "name": "estuary.dev/build",
          "value": "0101010101010101"
        },
        {
          "name": "estuary.dev/collection",
          "value": "ops/tasks/BASE_NAME/logs"
        },
        {
          "name": "estuary.dev/field/kind",
          "value": "capture"
        },
        {
          "name": "estuary.dev/field/name",
          "value": "the%2Ftask%2Fname"
        },
        {
          "name": "estuary.dev/key-begin",
          "value": "00000000"
        },
        {
          "name": "estuary.dev/key-end",
          "value": "ffffffff"
        }
      ]
    },
    "maxAppendRate": "4194304",
    "name": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=capture/name=the%2Ftask%2Fname/pivot=00",
    "replication": 3
  }
]
