crates/activate/src/snapshots/activate__test__partition_splits.snap
---
source: crates/activate/src/lib.rs
expression: "json!([\"splits\", splits, \"partition_changes\", partition_changes])"
---
[
  "splits",
  [
    [
      "example/collection/2020202020202020/a_bool=%_true/a_str=a-val/pivot=10000000",
      {
        "labels": [
          {
            "name": "estuary.dev/field/a_bool",
            "value": "%_true"
          },
          {
            "name": "estuary.dev/field/a_str",
            "value": "a-val"
          },
          {
            "name": "estuary.dev/key-begin",
            "value": "10000000"
          },
          {
            "name": "estuary.dev/key-end",
            "value": "27ffffff"
          },
          {
            "name": "extra",
            "value": "1"
          }
        ]
      },
      111
    ],
    [
      "example/collection/2020202020202020/a_bool=%_true/a_str=a-val/pivot=28000000",
      {
        "labels": [
          {
            "name": "estuary.dev/field/a_bool",
            "value": "%_true"
          },
          {
            "name": "estuary.dev/field/a_str",
            "value": "a-val"
          },
          {
            "name": "estuary.dev/key-begin",
            "value": "28000000"
          },
          {
            "name": "estuary.dev/key-end",
            "value": "3fffffff"
          },
          {
            "name": "extra",
            "value": "1"
          }
        ]
      },
      0
    ]
  ],
  "partition_changes",
  {
    "changes": [
      {
        "expectModRevision": "111",
        "upsert": {
          "flags": 4,
          "fragment": {
            "compressionCodec": "GZIP",
            "flushInterval": "900s",
            "length": "536870912",
            "pathPostfixTemplate": "utc_date={{.Spool.FirstAppendTime.Format \"2006-01-02\"}}/utc_hour={{.Spool.FirstAppendTime.Format \"15\"}}",
            "refreshInterval": "300s",
            "stores": [
              "gs://example-bucket/"
            ]
          },
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-ndjson"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/collection",
                "value": "example/collection"
              },
              {
                "name": "estuary.dev/field/a_bool",
                "value": "%_true"
              },
              {
                "name": "estuary.dev/field/a_str",
                "value": "a-val"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "10000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "27ffffff"
              }
            ]
          },
          "maxAppendRate": "4194304",
          "name": "example/collection/2020202020202020/a_bool=%_true/a_str=a-val/pivot=10000000",
          "replication": 3
        }
      },
      {
        "upsert": {
          "flags": 4,
          "fragment": {
            "compressionCodec": "GZIP",
            "flushInterval": "900s",
            "length": "536870912",
            "pathPostfixTemplate": "utc_date={{.Spool.FirstAppendTime.Format \"2006-01-02\"}}/utc_hour={{.Spool.FirstAppendTime.Format \"15\"}}",
            "refreshInterval": "300s",
            "stores": [
              "gs://example-bucket/"
            ]
          },
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-ndjson"
              },
              {
                "name": "estuary.dev/build",
                "value": "01:01:01:01:01:01:01:01"
              },
              {
                "name": "estuary.dev/collection",
                "value": "example/collection"
              },
              {
                "name": "estuary.dev/field/a_bool",
                "value": "%_true"
              },
              {
                "name": "estuary.dev/field/a_str",
                "value": "a-val"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "28000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "3fffffff"
              }
            ]
          },
          "maxAppendRate": "4194304",
          "name": "example/collection/2020202020202020/a_bool=%_true/a_str=a-val/pivot=28000000",
          "replication": 3
        }
      }
    ]
  }
]
