crates/activate/src/snapshots/activate__test__reset_unpartitioned.snap
---
source: crates/activate/src/lib.rs
expression: new_partitions
---
[
  {
    "name": "example/collection/replaced-pub-id/pivot=00",
    "labels": {
      "labels": [
        {
          "name": "estuary.dev/key-begin",
          "value": "00000000"
        },
        {
          "name": "estuary.dev/key-end",
          "value": "7fffffff"
        }
      ]
    },
    "mod_revision": 222,
    "suspend": null
  },
  {
    "name": "example/collection/replaced-pub-id/pivot=80000000",
    "labels": {
      "labels": [
        {
          "name": "estuary.dev/key-begin",
          "value": "80000000"
        },
        {
          "name": "estuary.dev/key-end",
          "value": "ffffffff"
        }
      ]
    },
    "mod_revision": 222,
    "suspend": null
  },
  {
    "name": "example/collection/2020202020202020/pivot=00",
    "labels": {
      "labels": [
        {
          "name": "estuary.dev/key-begin",
          "value": "00000000"
        },
        {
          "name": "estuary.dev/key-end",
          "value": "7fffffff"
        }
      ]
    },
    "mod_revision": 0,
    "suspend": null
  },
  {
    "name": "example/collection/2020202020202020/pivot=80000000",
    "labels": {
      "labels": [
        {
          "name": "estuary.dev/key-begin",
          "value": "80000000"
        },
        {
          "name": "estuary.dev/key-end",
          "value": "ffffffff"
        }
      ]
    },
    "mod_revision": 0,
    "suspend": null
  }
]
